[gd_scene load_steps=7 format=3 uid="uid://csu25e1pvyhyy"]

[ext_resource type="Script" uid="uid://bxpmehy1fievf" path="res://scenes/select_race.gd" id="1_xumoe"]
[ext_resource type="FontFile" uid="uid://crx6hep6niu0h" path="res://Mystfont-Regular.ttf" id="2_0wbac"]
[ext_resource type="Texture2D" uid="uid://dmo58jc8uhqku" path="res://textbox.png" id="2_awh6r"]
[ext_resource type="StyleBox" uid="uid://ba2bwua03esue" path="res://buttons/buttonhover.tres" id="3_ygoi5"]
[ext_resource type="StyleBox" uid="uid://55lry02uaqka" path="res://buttons/buttonnormal.tres" id="4_awh6r"]
[ext_resource type="StyleBox" uid="uid://bw2kihw85ddfp" path="res://buttons/buttonpressed.tres" id="5_m3va8"]

[node name="SelectRace" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xumoe")

[node name="Textbox" type="Sprite2D" parent="."]
position = Vector2(370, 331.219)
scale = Vector2(1.65104, 1.57406)
texture = ExtResource("2_awh6r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 188.0
offset_top = -158.0
offset_right = 499.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Human" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("2_0wbac")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = ExtResource("3_ygoi5")
theme_override_styles/pressed = ExtResource("5_m3va8")
theme_override_styles/normal = ExtResource("4_awh6r")
toggle_mode = true
text = "Human"

[node name="Elf" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("2_0wbac")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = ExtResource("3_ygoi5")
theme_override_styles/pressed = ExtResource("5_m3va8")
theme_override_styles/normal = ExtResource("4_awh6r")
toggle_mode = true
text = "ELF"

[node name="Dwarf" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("2_0wbac")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = ExtResource("3_ygoi5")
theme_override_styles/pressed = ExtResource("5_m3va8")
theme_override_styles/normal = ExtResource("4_awh6r")
toggle_mode = true
text = "DWARF"

[node name="Giant" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("2_0wbac")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = ExtResource("3_ygoi5")
theme_override_styles/pressed = ExtResource("5_m3va8")
theme_override_styles/normal = ExtResource("4_awh6r")
toggle_mode = true
text = "GIANT"

[node name="defaultlabel" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 130.0
offset_top = 184.0
offset_right = 611.0
offset_bottom = 479.0
theme_override_fonts/normal_font = ExtResource("2_0wbac")
theme_override_font_sizes/normal_font_size = 39
text = "Select race"
vertical_alignment = 3

[node name="dwarflabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 130.0
offset_top = 177.0
offset_right = 611.0
offset_bottom = 482.0
theme_override_fonts/normal_font = ExtResource("2_0wbac")
theme_override_font_sizes/normal_font_size = 39
text = "Sturdy and stubborn, dwarves are expert craftsmen and warriors, thriving in mountains and deep halls."
horizontal_alignment = 3
vertical_alignment = 3

[node name="giantlabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 129.0
offset_top = 172.0
offset_right = 610.0
offset_bottom = 477.0
theme_override_fonts/normal_font = ExtResource("2_0wbac")
theme_override_font_sizes/normal_font_size = 39
text = "Towering and powerful, giants possess immense strength and a deep connection to ancient traditions."
horizontal_alignment = 3
vertical_alignment = 3

[node name="elflabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 129.0
offset_top = 175.0
offset_right = 610.0
offset_bottom = 480.0
theme_override_fonts/normal_font = ExtResource("2_0wbac")
theme_override_font_sizes/normal_font_size = 39
text = "Graceful and long-lived, elves are attuned to nature and magic, known for their agility and keen senses."
horizontal_alignment = 3
vertical_alignment = 3

[node name="humanlabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 129.0
offset_top = 174.0
offset_right = 610.0
offset_bottom = 479.0
theme_override_fonts/normal_font = ExtResource("2_0wbac")
theme_override_font_sizes/normal_font_size = 39
text = "Adaptable and ambitious, 
humans thrive in all walks 
of life, excelling through
ingenuity and resilience."
horizontal_alignment = 3
vertical_alignment = 3

[connection signal="pressed" from="VBoxContainer/Human" to="." method="_on_human_pressed"]
[connection signal="pressed" from="VBoxContainer/Elf" to="." method="_on_elf_pressed"]
[connection signal="pressed" from="VBoxContainer/Dwarf" to="." method="_on_dwarf_pressed"]
[connection signal="pressed" from="VBoxContainer/Giant" to="." method="_on_giant_pressed"]
